--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="header">
     <img src="myphoto6.jpeg" class="profile-img" alt="Ziad Photo">
     <h1>LINA MAHMOUD ABDELATEIF</h1>
-    <p class="marquee"><mark>By Coah. LINA MAHMOUD</mark></p>
+    <p class="marquee"><mark>By Coach. LINA MAHMOUD</mark></p>
   </div>
 
   <!-- ABOUT -->
@@ -79,5 +79,6 @@
 
 </body>
 </html>
+
 
 
