--- a/index.html
+++ b/index.html
@@ -62,9 +62,11 @@
 
 قدرة عالية على التعامل مع الأطفال
     </p>
+  </section>
+ 
      
  
-
+<section> 
   <!-- CONTACT -->
   <section id="contact" class="contact">
     <h2>Contact Us</h2>
@@ -79,6 +81,7 @@
 
 </body>
 </html>
+
 
 
 
